# games

./: .gitignore  README.md
Chess/engine_gui_communication/uci/uci_dummy/: uci.cpp
Chess/engine_gui_communication/xboard/xboard_dummy/: CMakeLists.txt  xboard_dummy.cpp
Chess/move_generator/: CMakeLists.txt  main.cpp
Eight Number/gui/: EightNumberApp.cpp  EightNumberApp.hpp  EightNumberMainFrame.cpp  EightNumberMainFrame.hpp
Eight Number/logic/: EightNumber.cpp  EightNumber.hpp  StateSpaceGraph.cpp  StateSpaceGraph.hpp
Eight Number/utility/: Utility.cpp  Utility.hpp
EightNumber/: CMakeLists.txt
EightNumber/gui/: EightNumberApp.cpp  EightNumberApp.hpp  EightNumberMainFrame.cpp  EightNumberMainFrame.hpp
EightNumber/logic/: EightNumber.cpp  EightNumber.hpp
EightNumber/utility/: Utility.cpp  Utility.hpp
EightPuzzle/: CMakeLists.txt
EightPuzzle/gui/: EightPuzzleApp.cpp  EightPuzzleApp.hpp  EightPuzzleMainFrame.cpp  EightPuzzleMainFrame.hpp
EightPuzzle/logic/: EightPuzzle.cpp  EightPuzzle.hpp  StateSpaceGraph.cpp  StateSpaceGraph.hpp
EightPuzzle/utility/: Utility.cpp  Utility.hpp
NQueens/: CMakeLists.txt  Nqueens.cpp  Nqueens.h  main.cpp
NQueens/data/:  11Queens.txt   12Queens.txt   4Queens.txt   5Queens.txt   6Queens.txt   7Queens.txt   9Queens.txt
Sudoku Solver/: Board_Class.pde  LBox_Class.pde  MBox_Class.pde  Notes.doc  Solver_Class.pde  Sudoku_Solver.pde
Tetris/: BoardPanel.cpp  BoardPanel.hpp  CMakeLists.txt  Engine.pde  Renderer.pde  Shape.cpp  Shape.hpp  Tetrimino.pde  Tetris.pde  TetrisApp.cpp  TetrisApp.hpp  TetrisFrame.cpp  TetrisFrame.hpp
Tic-Tac-Toe/: CMakeLists.txt
Tic-Tac-Toe/gui/: SimulationDialog.cpp  SimulationDialog.hpp  TicTacToeApp.cpp  TicTacToeApp.hpp  TicTacToeMainFrame.cpp  TicTacToeMainFrame.cpp.autosave  TicTacToeMainFrame.hpp
Tic-Tac-Toe/logic/: TicTacToe.cpp  TicTacToe.hpp
Tic-Tac-Toe/utility/: TicTacToeTree.cpp  TicTacToeTree.hpp  Utility.cpp  Utility.hpp
TicTacToe/WxFormBuilder/TicTacToe/wxform_files/: TicTacToe.fbp  noname.cpp  noname.h
TicTacToe/WxFormBuilder/TicTacToe_2/: CMakeLists.txt  TicTacToe.cpp  TicTacToe.fbp  TicTacToe.h  TicTacToeMainFrame.cpp  TicTacToeMainFrame.h  tic-tac-toe_app.cpp  tic-tac-toe_app.hpp
TicTacToe/tic-tac-toe/: CMakeLists.txt  tic-tac-toe_app.cpp  tic-tac-toe_app.hpp  tic-tac-toe_frame.cpp  tic-tac-toe_frame.hpp
