CMAKE_MINIMUM_REQUIRED(VERSION 3.0)

PROJECT(Tic-Tac-Toe)

ADD_DEFINITIONS(-std=c++14)
SET(CMAKE_BUILD_TYPE Debug)

AUX_SOURCE_DIRECTORY(./gui SOURCES)
AUX_SOURCE_DIRECTORY(./logic SOURCES)
AUX_SOURCE_DIRECTORY(./utility SOURCES)

FIND_PACKAGE(wxWidgets REQUIRED core richtext)
IF(wxWidgets_FOUND)
    include(${wxWidgets_USE_FILE})
    set(LINK_LIBS ${LINK_LIBS} ${wxWidgets_LIBRARIES})
    message(STATUS ${wxWidgets_LIBRARIES})
ENDIF(wxWidgets_FOUND)

ADD_EXECUTABLE(${PROJECT_NAME} ${SOURCES})
TARGET_LINK_LIBRARIES(${PROJECT_NAME} ${LINK_LIBS})